[tool.poetry]
name = "plot-utils"
version = "0.1.0"
description = "Collection of helper functions for matplotlib."
authors = ["Lucas Tepper <lucas.tepper.91@gmail.com>"]
license = "{file = \"LICENSE.txt\"}"
readme = "README.md"
packages = [{include = "plot_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
